<resources  xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="amendments">Amendments</string>
    <string name="app_name">OpenHDS Mobile</string>
    <string name="bad_authentication">Authentication Failed</string>
    <string name="register">Register</string>
    <string name="bad_xml">Error parsing XML</string>
    <string name="changePassword">Change Password</string>
    <string name="changeServer">Change Server</string>
    <string name="changeUsername">Change Username</string>
    <string name="configuration">Configuration</string>
    <string name="configureDatabase">Configure Database</string>
    <string name="databaseSync">Sync with OpenHDS Database</string>
	<string name="sync_database_name">Sync Database</string>
    <string name="choose">Please choose </string>
    <string name="default_server_url">http://solarmal.mbita.icipe.org:8080/openhdsMbita/mobile-interop</string>
    <string name="interop_server_url_key">interop_server_url</string>
	<string name="default_openhds_server_url">http://data-management.local:8080/openhds</string>
	<string name="openhds_server_url">http://data-management.local:8080/openhds</string>
    <string name="openhds_server_url_default_summary">Same URL used for OpenHDS Server via Web browser</string>
	<string name="openhds_server_url_key">openhds_server_url</string>
	<string name="openhds_server_url_title">OpenHDS Server URL</string>
	<string name="supervisor_login_url">/api/rest/socialgroups</string>
	<string name="supervisor_login">Supervisor Login</string>
    <string name="default_openhdsserver">http://solarmal.mbita.icipe.org:8080/openhdsMbita</string>
    <string name="delete_form_btn">Delete Form</string>
    <string name="download_form_button">Download Forms</string>
    <string name="download_extraform_button">Download Extra Forms</string>
    <string name="failure_reasons_txt">Failure messages:</string>
    <string name="fatherNotFound">A father could not be found</string>
    <string name="field_worker_already_exists">Field Worker already exists</string>
    <string name="field_worker_created">Field Worker Successfully Created</string>
    <string name="form_status">Form Status:</string>
    <string name="form_view_lbl">Form View</string>
    <string name="hello">Hello, Android!</string>
    <string name="household_not_found">A household was not found for this Individual</string>
    <string name="idGenerationFailure">An error occurred while generating an id</string>
    <string name="location_lbl">Location:</string>
    <string name="form_lbl">Form:</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="main_txt">Form Management</string>
    <string name="openhdswebservice">OpenHDS Web Service</string>
    <string name="owner_txt">Form Owner Id:</string>
    <string name="password">OpenHDS Password</string>
    <string name="retrieving_fieldworkers_interrupted">Retrieving Field Workers has been interrupted</string>
    <string name="send_to_odk_btn">Edit in ODK</string>
    <string name="shared_pref_file_name">server_prefs</string>
    <string name="shared_pref_server_url_key">server_url</string>
	<string name="syncDatabase">Sync Database</string>
	<string name="syncDatabaseMessage">This procedure will attempt to download OpenHDS entities onto the device. Please be patient while the download is in progress.</string>
	<string name="sync_database_description">Syncs census data with server.</string>
	<string name="sync_field_worker_description">Syncs field workers with server.</string>
	<string name="sync_entities_failure">Failed to Collect OpenHDS Entities</string>
	<string name="sync_forms_successful">Forms Collected Successfully</string>
	<string name="sync_forms_failure">Failed to Collect the forms</string>
	<string name="sync_entities_successful">OpenHDS Entities Collected Successfully</string>
    <string name="sync_interrupted">Collecting OpenHDS Entities has been interrupted</string>
    <string name="sync_restarting">Sync restarting</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="update">Update</string>
    <string name="username">OpenHDS Username</string>
    <string name="view_forms_btn">View My Forms</string>
	<string name="see_list">See List</string>
    <string name="location_hint_lbl">Location External Id</string>
    <string name="form_hint_lbl">Form Name</string>
    <string name="firstname_lbl">First Name:</string>
    <string name="firstname_hint_lbl">First Name</string>
    <string name="lastname_lbl">Last Name:</string>
    <string name="lastname_hint_lbl">Last Name</string>
    <string name="gender_lbl">Gender:</string>
    <string name="male_lbl">Male</string>
    <string name="female_lbl">Female</string>
    <string name="clear_lbl">Clear</string>
    <string name="search_lbl">Search</string>
    <string name="search_loc_lbl">Search Location</string>
    <string name="search_form_lbl">Search Form</string>
    <string name="search_individual_lbl">Search for an Individual</string>
    <string name="hierarchy1_lbl">Province:</string>
    <string name="hierarchy1_hint_lbl">Province External Id</string>
    <string name="hierarchy2_lbl">District:</string>
    <string name="hierarchy2_hint_lbl">District External Id</string>
    <string name="hierarchy3_lbl">Zone:</string>
    <string name="hierarchy3_hint_lbl">Zone External Id</string>
    <string name="hierarchy4_lbl">Village:</string>
    <string name="hierarchy4_hint_lbl">Village External Id</string>
    <string name="select_hierarchy1_lbl">Select Province</string>
    <string name="select_hierarchy2_lbl">Select District</string>
    <string name="select_hierarchy3_lbl">Select Zone</string>
    <string name="select_hierarchy4_lbl">Select Village</string>
      <string name="roundBtn_lbl">Select Round</string>
	<string name="roundNumber_lbl">Round Number:</string>
	<string name="roundStartDate_lbl">Start Date:</string>
	<string name="roundEndDate_lbl">End Date:</string>
	<string name="locationBtn_lbl">Select Location</string>
	<string name="locationName_lbl">Name:</string>
	<string name="locationLatitude_lbl">Latitude:</string>
	<string name="locationLongitude_lbl">Longitude:</string>
	<string name="searchlBtn_lbl">Filter Location</string>
	<string name="individualBtn_lbl">Select Individual</string>
	<string name="individualFirstName_lbl">First Name:</string>
	<string name="individualLastName_lbl">Last Name:</string>
	<string name="findLocationGeoPointBtn_lbl">Find Location with GeoPoint</string>
	<string name="createLocationBtn_lbl">Create Location</string>
	<string name="createVisitBtn_lbl">Create Visit</string>
	<string name="clearIndividualBtn_lbl">Clear Individual</string>
	<string name="householdBtn_lbl">Household</string>
	<string name="membershipBtn_lbl">Membership</string>
	<string name="relationshipBtn_lbl">Relationship</string>
	<string name="inMigrationBtn_lbl">In Migration</string>
	<string name="outMigrationBtn_lbl">Out Migration</string>
	<string name="pregRegBtn_lbl">Pregnancy Observation</string>
	<string name="birthRegBtn_lbl">Pregnancy Outcome</string>
	<string name="deathBtn_lbl">Death</string>
	<string name="finishVisitBtn_lbl">Finish Visit</string>
	<string name="fworkerExtId_lbl">Field Worker ExtId</string>
	<string name="registerChkBox_lbl">Register Field Worker on Device</string>
	<string name="fieldWorkerLoginBtn_lbl">Log in as Field Worker</string>
	<string name="supervisorLoginBtn_lbl">Log in as Supervisor</string>
	<string name="supervisor_username_key">Supervisor Login</string>
	<string name="supervisor_password_key">Supervisor Pw</string>
	<string name="server_preferences_lbl">Server Preferences</string>
	<string name="preferences">Preferences</string>
	<string name="configure_server_lbl">Configure Server</string>
	<string name="locations_nearesert_you_lbl">Locations nearest you</string>
	<string name="hierarchy5Btn_lbl">Select Neighborhood</string>
	<string name="hierarchy5_lbl">Neighborhood:</string>
    <string name="hierarchy5_hint_lbl">Neighb. External Id</string>
    <string name="dialog_working_lbl">Working...</string>
	<string name="dialog_dont_interrupt_lbl">Do not interrupt</string>
	<string name="formmenu_extraforms">Extra Forms</string>
	<string name="loginmenu_configure">Configure Server</string>
	<string name="no_server_url">No server URL has been set. Set server URL from preferences</string>
	<string name="bad_server_url">Bad Server URL</string>
	<string name="fwlogin_registerlbl">Register</string>
	<string name="fwlogin_loginlbl">Login</string>
	<string name="authenticating_lbl">Authenticating...</string>
	<string name="please_wait_lbl">Please Wait</string>
	<string name="please_choose_lbl">Please choose </string>
	<string name="loading_lbl">Loading</string>
	<string name="loading_form_subm_lbl">Loading form submission...</string>
	<string name="loading_into_odk_lbl">Loading form into ODK Collect...</string>
	<string name="formload_failed_writedir_lbl">There was a problem creating directories</string>
	<string name="formload_failed_writexml_lbl">There was a problem writing the XML file</string>
	<string name="formload_failed_odkins_lbl">There was a problem with ODK Collect</string>
	<string name="formload_already_completed_lbl">This form has already been completed</string>
	<string name="updating_lbl">Updating</string>
	<string name="updating_form_info_lbl">Updating form information...</string>
	<string name="completed_lbl">Completed</string>
	<string name="not_completed_lbl">Not Completed</string>
	<string name="map_curlocation_format_lbl">Current Location \n Longitude: %1$s \n Latitude: %2$s</string>
	<string name="warning_lbl">Warning</string>
	<string name="showmap_gps_disabled_lbl">Your GPS seems to be disabled. Please make sure that it\'s enabled in order to use this service.</string>
	<string name="showmap_gps_turned_off">Provider disabled by the user. GPS turned off</string>
	<string name="showmap_gps_turned_on">Provider enabled by the user. GPS turned on</string>
	<string name="showmap_gps_changed">Provider status changed</string>
	<string name="sprvlogin_bad_auth">Failed to authenticate username and password</string>
	<string name="sprvlogin_created_user">Successfully created new user</string>
	<string name="sprvlogin_connection_error">There was a problem communicating with the server</string>
	<string name="sprvlogin_error_user">There was an error creating the user</string>
	<string name="sprvlogin_user_notrecon">User not recognized</string>
	<string name="sprvlogin_authenticate_with_server">Do you want to authenticate with the server?</string>
	<string name="yes_lbl">Yes</string>
	<string name="no_lbl">No</string>
	<string name="error_lbl">Error</string>
	<string name="success_lbl">Success</string>
	<string name="trying_to_authenticate_lbl">Trying to authenticate...</string>
	<string name="sprvlogin_enter_in_user">Please enter in a user</string>
	<string name="sprvlogin_enter_in_pass">Please enter in a password</string>
	<string name="sprvmain_downlall_forms">Downloading all forms...</string>
	<string name="working_lbl">Working</string>
	<string name="sprvmain_failed_auth">Bad username and/or password</string>
	<string name="sprvmain_failure">There was a problem reading response from server</string>
	<string name="sprvmain_connection_error">There was a error with the network connection</string>
	<string name="sprvmain_connection_timeout">Connection to the server timed out</string>
	<string name="sprvmain_on_success">Download all forms successfully</string>
	<string name="sprvmain_no_content">No forms to download</string>
	<string name="sprvmain_downl_extraforms">Downloading extra forms...</string>
	<string name="sync_db_stop_sync">Are you sure you want to stop sync?</string>
	<string name="odk_problem_lbl">There was a problem with ODK</string>
</resources>