<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	    
	     <Button
	        android:id="@+id/findLocationGeoPointBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/findLocationGeoPointBtn_lbl"
	        android:enabled="false" />
	    
	    <Button
	        android:id="@+id/createLocationBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/createLocationBtn_lbl"
	        android:enabled="false" />
	    
	    <Button
	        android:id="@+id/createVisitBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/createVisitBtn_lbl"
	        android:enabled="false" />

	     <Button
	        android:id="@+id/changeHouseholdHeadBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="22dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/changeHouseholdHeadBtn_lbl"
	        android:enabled="false"  />
	        	    
	     <Button
	        android:id="@+id/householdBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="22dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/householdBtn_lbl"
	        android:enabled="false"  />
	    
	     <Button
	        android:id="@+id/membershipBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/membershipBtn_lbl"
	        android:enabled="false"  />
	    
	     <Button
	        android:id="@+id/relationshipBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/relationshipBtn_lbl"
	        android:enabled="false"  />
	    
	    <Button
	        android:id="@+id/inMigrationBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/inMigrationBtn_lbl"
	        android:enabled="false"  />
	    
	     <Button
	        android:id="@+id/outMigrationBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/outMigrationBtn_lbl"
	        android:enabled="false"  />
	     
	      <Button
	        android:id="@+id/pregRegBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/pregRegBtn_lbl"
	        android:enabled="false"  />
	      
	       <Button
	        android:id="@+id/birthRegBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/birthRegBtn_lbl"
	        android:enabled="false"  />
	       
	     <Button
	        android:id="@+id/deathBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/deathBtn_lbl"
	        android:enabled="false"  />
	          
	    <Button
	        android:id="@+id/finishVisitBtn"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="22dp"
	        android:layout_marginLeft="20dp"
	        android:layout_gravity="center"
	        android:text="@string/finishVisitBtn_lbl"
	        android:enabled="false"  />
	
	</LinearLayout>
</ScrollView>