<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/search_loc_lbl"
            android:textAppearance="?android:attr/textAppearanceLarge" />

      
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/clearFilterBtn"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/clear_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/searchFilterBtn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.23"
                android:text="@string/search_lbl"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


</ScrollView>